tests/a/tests/integrity/fail/struct/struct.3.stderr
error: expected {root}{root}, found {root}{c,root}
  --> tests/integrity/fail/struct/struct.3.rs:26:13
   |
26 |     let y = b.string;
   |             ^^^^^^^^
